tooling/nargo_cli/tests/snapshots/execute__tests__loop_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9740327986331390669",
  "abi": {
    "parameters": [
      {
        "name": "six_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91XTU+DQBBdClSxMTZ69gd4W1IorSeSthcPHk0T4wFbSUz8Efx0Q5wJr+OUomXVOJdZuo83X4+FeqYxj3wgro2Cycnb4yzukcuqibYZY97IR+QHsO/3WGwk4vbJP7PJNFLq6zH/SUScLvvDnA747QnxrKqGX9ZiwDNO3lPvn9MadcaYU9rn9ZjWkbjHxfwdzsdeKfkPoLbaFpWb2My/dMMfj2hWiZiVo14mzB+44U9Zn6H5bLw3VOaonZu+uMa8657dAq/EyZj4bGN8zCEgnMQzXyjw1+Qd99ReAq/sg2O9TP6TXu6BV+JkTBd6uSH/F/Ti6F2XnIt4+/rMps2Mf6tnVtK6y8xQGyGskRNnNhAYY5qZMX5C/jdnNjLNey6o+o+fzazluH7V9EHOBuOHAj+n67M9deTfzLPMiricFGWRFtttsilkn2obQJ/wXSqfZZmX5PFbuMcKF39zSP3h3hBq98zuXLnHh7TI+JVpOBe0vjD6t11tI9gPlH2+D89eX8HL3IaQh4YPRf6MvyNfz+iV1mMlJ/nsBkp+2Otl9eG1cyCAXHOI/9MaaavFU2qRsxkqeKklxD+Qx14f0una7MZGHWo6lbEZ/wQ5P9K6q061/TadIr6LThG/T6fP5L+qU0/Jr6tOPch1DfHl/wLZn5yu7XE2rWfQ99mdpEW2KbI4nifxSxKnh87ud2xLB1UVEgAA",
  "debug_symbols": "ldfbioMwEAbgd8m1F5nM5NRXWZZi27QIosXahaX03TcutZQ0UP4bMeLH6IxjmJs6pN31tO2G43hRm6+b6sd9O3fjkFe3e6N2U9f33Wn7elnp5UD+//7LuR2W5WVup1ltyHCj0nDIZ2yzP3Z9Uhur79+NogCLiAqjYUGwMLBgWAgs7AchvhQOFh4WARb1mjtZhXeFYA0LgoWBBcNCYGFh4WDhP4gQShFgEVEhGhbVmhttHsKQlMLAgmEhsLCwcLDwH4R5y26ARUSF1bCoxwhPEbgQTsOCYFGtOWt6CNamFNV6MMVVmLJrXURjeI3G8AQLAwuGhcDCwqKe3bjuahzLjgoaFgSLanaFViFvfR4YFgILC4uAiljNlfD6tQuXf4YIv3kUOIaFhYOFh0WARcTEPa9+2qlrd316jBHH67B/mSrm33MqBozzNO7T4TqlZdR4mTKWvrGmsT4/CC1lJm0b0j5HyZH+AA==",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is basic looping.\nfn main(six_as_u32: u32) {\n    assert_eq(loop_excl(4), six_as_u32);\n    assert_eq(loop_incl(3), six_as_u32);\n    assert(plain_loop() == six_as_u32);\n}\n\nfn loop_excl(x: u32) -> u32 {\n    let mut sum = 0;\n    for i in 0..x {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn loop_incl(x: u32) -> u32 {\n    let mut sum = 0;\n    for i in 0..=x {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn plain_loop() -> u32 {\n    let mut sum = 0;\n    for i in 0..4 {\n        sum = sum + i;\n    }\n    sum\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/loop/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
