tooling/nargo_cli/tests/snapshots/execute__tests__loop_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9740327986331390669",
  "abi": {
    "parameters": [
      {
        "name": "six_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUzQ7CIAwGh1Fc9ODPRV+iyza34w6+CHHhOXh0s6QNtUEPCr20pOXr97UEraJp9EacVaJmQg//WZMRC5JEvxnV3NBb9CuWrzKKtaJvTvwRut4m9GXk31rELDkfwiyADxvEeYSIL7Uo5qlO3lnye4z5O6OaLeYpPmBsxZ0S+y+4Hzgl+FOvGrVehNZCXO5ave/MYCx7Ete1qD8LnqbQzI4MV4letYp/jgn5+w8jAPWtQpwDzYCbYXlef8Xz7oOO6UeefnCNb513vZvn7unknBbjb+sFX7f7gakGAAA=",
  "debug_symbols": "lZDLCoMwEEX/ZdZZGFu19VekSNRRAiGRPAol5N87KV0Ed9kMc4c5d3EibLiEY5Z6Nw7GKYIyq/DSaEoxMVisVEoec3mGJg/e/f7dKXSOzgvrYeTtjQHqjbb7QPwuFcLYNenFgPfVxFBNPKqJZx2RKL2FlWJR+Je0B70WzvznxIu+05oVt2Axiywc0pxaztqeaqn6Cw==",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is basic looping.\nfn main(six_as_u32: u32) {\n    assert_eq(loop_excl(4), six_as_u32);\n    assert_eq(loop_incl(3), six_as_u32);\n    assert(plain_loop() == six_as_u32);\n}\n\nfn loop_excl(x: u32) -> u32 {\n    let mut sum = 0;\n    for i in 0..x {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn loop_incl(x: u32) -> u32 {\n    let mut sum = 0;\n    for i in 0..=x {\n        sum = sum + i;\n    }\n    sum\n}\n\nfn plain_loop() -> u32 {\n    let mut sum = 0;\n    for i in 0..4 {\n        sum = sum + i;\n    }\n    sum\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
