tooling/nargo_cli/tests/snapshots/execute__tests__loop_invariant_regression_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10192566036890250599",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VYzY7TMBCe/HU3WzjAdk9IqEcOSNiJkzicKkH3PdI0eY4eeQAegifhwoFXYrPrIdPBAbQdjxTZiSfffPN57LiN4MlWD9cL148ersS107UlzyfbuVZdZhpIDIpbqtqYoSkGXepOFe3BVspUh9pqqytbHQtbloM1tmkPbaNabcpBj1Vbjg44luOoqBZxYC1imO1SLYbx0aqUaUwtRA5CvHvKNw1JOCXCS5FPBTlmILcwQmmYgdwiRg0zOY6ieY/OIuG8cY5WEGbzmnC3wusolBa4eUnXACzkL7GuhHgWuNklsGxCsczfNFGXmY4gzNwJa1CcCYDixx5hqMWe/o+vP79/+9Idqd/1whi+89G1OXuOC3cnk6TOCa40vlWmyeHchPmXOZzPTyj8LAy+unI4n08zPs0F4ybMj7+TEJ898dkv+NwTn3vm8xL+PBliLByjdb5nY3SDQuyp3l/B3L91/ZzFClF/lK/0/N16+Mckt8k+nWRj48d17bTUTMtAtVpiniuHl8L5LyBg8UNrHzjfHvGvwuBrXC+pp3Ymjd+Q53QsI7qnzAfHqf9bgqmYD87lB+KzXYgbw7y2eU1PhnrlYfRSyAe/nbT+eEyaI/q/Y3mt3X0C/jpOmP+NJy5iUE0y5o9xJx4Nw/Tl4ltLPJf3rg2t+WuCC55Y/Fvgq0tcP/9b77RO1yReepLPsbFPdfXI/TRr7Ttkp2Sc+tfu/obkBSTX3TN5jk2nx7Ibu6o7Hk3f8bkAot86QPza1NrazvZ1P7amP/wrPs4TtnfEP8SZdRMG//eZjNod6W9Ynr5/59SFhnh0L+MWszH0vWb8Inl+mnNJPLHQ8Ky3Ic9Qz1+b3qLuZhYAAA==",
  "debug_symbols": "tZTdioMwEEbfJddeOJOZ/PgqSym2tUUQLdYuLKXvvkkx3dWGQiPeCGPmnATNNzdxqHbX07Zuj91FFF830XT7cqi71lU3AY9Xl3PZ+uoylP0gCjCQiao9iAJzuGfiWDeVKDi/Zy+tZGlsJWv/t24ygSu65UI3SzO2MsmZm2JuzHVwS37vVsxjq1Iwc/OKbrWiWy91m/C91cu/NCu67UK3Rjm2ajQzN+RROT0vocL3ckvhHJbVXB5NpiQcCWkm8o0rdn3dNPVpOwl47h8YPSkAq9EGMD2rTy8kMDrOSHgyNGdkfEwghPADIs8ZmcBQAsMJjEpgdAJjEhj7OUPxu4PET8Zf7ikDCQwmMDKBoU+Zu6u+y74ud03lM+UXr+0+RMyVw885rIQQnvtuXx2ufeXj+JfEx8wgmzGFjLuhy9rt4fb5BQ==",
  "file_map": {
    "50": {
      "source": "// Tests a simple loop where we expect loop invariant instructions\n// to be hoisted to the loop's pre-header block.\nglobal U32_MAX: u32 = 4294967295;\n\nfn main(x: u32, y: u32) {\n    simple_loop(4, x, y);\n    loop_with_predicate(4, x, y);\n    array_read_loop(4, x);\n    //Safety: testing for failing assert under condition\n    unsafe {\n        loop_with_break_under_predicate(4, y, x);\n    }\n}\n\nfn simple_loop(upper_bound: u32, x: u32, y: u32) {\n    for _ in 0..upper_bound {\n        let mut z = x * y;\n        z = z * x;\n        assert_eq(z, 12);\n    }\n}\n\nfn loop_with_predicate(upper_bound: u32, x: u32, y: u32) {\n    for _ in 0..upper_bound {\n        if x == 5 {\n            let mut z = U32_MAX * y;\n            assert_eq(z, 12);\n        }\n    }\n}\n\nfn array_read_loop(upper_bound: u32, x: u32) {\n    let arr = [2; 5];\n    for i in 0..upper_bound {\n        for j in 0..upper_bound {\n            for _ in 0..upper_bound {\n                assert_eq(arr[i], x);\n                assert_eq(arr[j], x);\n            }\n        }\n    }\n}\n\nunconstrained fn loop_with_break_under_predicate(upper_bound: u32, x: u32, y: u32) {\n    for _ in 0..upper_bound {\n        if x == 3 {\n            break;\n        }\n        let mut z = U32_MAX * y;\n        assert_eq(z, 12);\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "loop_with_break_under_predicate",
    "directive_invert"
  ]
}
